--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Kundai chatizembwa</h1>n</h1>
-								<p>A website into who she is  <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>A website that dives right into who she is, and all that she can offer herself , and alll of those around her  </p>
 							</div>
 						</div>
 						<nav>
@@ -360,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
