--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>My name is Kundai, and I’m 19 years old. I was born on July 19 and have had the incredible opportunity to live in four different countries — South Africa, Zimbabwe, Ivory Coast, and Tunisia. My journey across these diverse cultures has shaped who I am today, giving me a deep appreciation for people, traditions, and experiences from all walks of life. Each country I’ve called home has taught me something unique, and together, they’ve inspired my outlook on life, growth, and connection.<a href="#work">awesome work</a>.</p>
+								<p>I love cooking , reading ,writing , and making sure that I stay up to speed and up to date with current moves and trends around me.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>My main goal is to always be authentic in my work.To alwayys smile ,and be appreciate with the oppututnities granted to em as I understand taht it might nto always be a goal or soemthing thatt we can all lead up to.</p>
+								<p>Currently I am a student at the univeristy of Limerick and I enjoy studying computer science.It is not midless and helps me to stay up to date about how revolutionary Compueter sciecne and AI is becomiing around us .</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>This website is insight into me and into who I am.What I aim to work towrds as I navigate twoards betetr and deeper surroundings about who I am , and who I ama iming to beocme in the long run ans I navigate into the future of me and of those around me </p>
 							</article>
 
 						<!-- Contact -->
@@ -131,9 +131,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 									<h4>Unordered</h4>
 									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
+										<li>Running </li>
+										<li>Dancing.</li>
+										<li>Eating .</li>
 									</ul>
 
 									<h4>Alternate</h4>
@@ -359,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
