Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Kundai chatizembwa</h1>n</h1>
+								<h1>Kundai chatizembwa</h1>About</h1>
 								<p>A website that dives right into who she is, and all that she can offer herself , and alll of those around her  </p>
 							</div>
 						</div>
@@ -359,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
