--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+							<article id="Work ethic">
+								<h2 class="major">Work ethic</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>My main goal is to always be authentic in my work.To alwayys smile ,and be appreciate with the oppututnities granted to em as I understand taht it might nto always be a goal or soemthing thatt we can all lead up to.</p>
 								<p>Currently I am a student at the univeristy of Limerick and I enjoy studying computer science.It is not midless and helps me to stay up to date about how revolutionary Compueter sciecne and AI is becomiing around us .</p>
@@ -359,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
