Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<div id="bg"><img src = " images/ </div>
+			<div id="bg"><img src = " images/Zimbabwe-flag-Vivid-Color-and-Fade-Proof-Zimbabwean-Flags-with-Brass-Grommets_ad2bee24-13a6-4154-8e9d-27ba9d3952d5.8e4216b90878c60763de084f7aa95aba.jpg "</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -359,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
