--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>My name is Kundai, and I’m 19 years old. I was born on July 19 and have had the incredible opportunity to live in four different countries — South Africa, Zimbabwe, Ivory Coast, and Tunisia. My journey across these diverse cultures has shaped who I am today, giving me a deep appreciation for people, traditions, and experiences from all walks of life. Each country I’ve called home has taught me something unique, and together, they’ve inspired my outlook on life, growth, and connection.<a href="#work">awesome work</a>.</p>
+								<p>My name is Kundai, and I’m 19 years old. I was born on July 19 and have had the incredible opportunity to live in four different countries — South Africa, Zimbabwe, Ivory Coast, and Tunisia. My journey across these diverse cultures has shaped who I am today, giving me a deep appreciation for people, traditions, and experiences from all walks of life. Each country I’ve called home has taught me something unique, and together, they’ve inspired my outlook on life, growth, and connection.</p>
 								<p>I love cooking , reading ,writing , and making sure that I stay up to speed and up to date with current moves and trends around me.</p>
 							</article>
 
@@ -359,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
