Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 							</article>
 
 						<!-- Work -->
-							<article id="Work ethic">
-								<h2 class="major">Work ethic</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<article id="Work">
+								<h2 class="major">Work </h2>
+								<span class="image main"><img src="images/" alt="" /></span>
 								<p>My main goal is to always be authentic in my work.To alwayys smile ,and be appreciate with the oppututnities granted to em as I understand taht it might nto always be a goal or soemthing thatt we can all lead up to.</p>
 								<p>Currently I am a student at the univeristy of Limerick and I enjoy studying computer science.It is not midless and helps me to stay up to date about how revolutionary Compueter sciecne and AI is becomiing around us .</p>
 							</article>
@@ -61,7 +61,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/" alt="" /></span>
 								<p>This website is insight into me and into who I am.What I aim to work towrds as I navigate twoards betetr and deeper surroundings about who I am , and who I ama iming to beocme in the long run ans I navigate into the future of me and of those around me </p>
 							</article>
 
@@ -359,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
